<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuizActivity"
    android:id="@+id/mainlayout">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Score: X"
        android:gravity="center"
        android:textAlignment="center"
        android:textSize="20sp"
        android:layout_marginVertical="20dp"
        android:id="@+id/score"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Who is this?"
        android:textSize="20dp"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_marginTop="20sp"
        android:id="@+id/question"
        android:layout_below="@id/score"
        />

    <ImageView
        android:id="@+id/quizpicture"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_below="@id/question"
        android:layout_marginTop="10dp"
        app:srcCompat="@drawable/ic_launcher_background" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/quizpicture"
        android:layout_marginTop="5dp"
        >
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="4dp"
            android:text="Option 1"
            android:textAllCaps="false"
            android:id="@+id/option1"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="4dp"
            android:text="Option 2"
            android:textAllCaps="false"
            android:id="@+id/option2"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="4dp"
            android:text="Option 3"
            android:textAllCaps="false"
            android:id="@+id/option3"
            />

    </LinearLayout>

</RelativeLayout>
